--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
      <div class="container-fluid">
    <a class="navbar-brand" href="#"><img src="./assets/download (5).jpg"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -60,7 +60,7 @@
           <div class="col-md-3">
             <h1 class="card-title">Gourmet Veggie Pizza</h1>
            <img src="./assets/download (3).jpg">
-            <p>This pizza also has fresh basil on top. It is served on a wooden platter with a pizza cutter, two glasses of beer, and two bottles of beer. The pizza appears to be cut into eight slices.  </p>
+            <p>This pizza also has fresh basil on top. It is served on a wooden platter with a pizza cutter, two glasses o+-f beer, and two bottles of beer. The pizza appears to be cut into eight slices.  </p>
             <a href="#" class="btn-primary">learn more</a>
             </div>
              <div class="col-md-3">
